add some responsiveness

--- a/index.html
+++ b/index.html
@@ -67,15 +67,19 @@
 
 
     <div class="hero">
-        <div class="slide ">
+         <div class="content">
+         <button class="content-btn1">New</button>
+         <h1>Zango Pro</h1>
+         <p>This laptop's unrivalled flexibility and AI features like Live Captions and Cocreator, enable you to do more than you ever imagined.</p>
+         <button class="content-btn2">Learn more</button>
+        </div> 
+
+
+
+        
+        <!-- <div class="slide ">
             <img src="hero.avif" alt="">
-           <div class="content">
-            <button class="content-btn1">New</button>
-            <h1>Zango Pro</h1>
-            <p>This laptop's unrivalled flexibility and AI features like Live Captions and Cocreator, enable you to do more than you ever imagined.</p>
-            <button class="content-btn2">Learn more</button>
-           </div>
-        </div>
+        </div> -->
         <!-- <div class="slide" id="slide2">
            <div class="content">
             <button class="content-btn1">New</button>
